gccida/g2/dbxout_source_line
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dbxout_source_line/src/dbxout.c:1085:47: error: use of undeclared identifier 'sym_lineno_4'
sprintf( temp, "*.%s%u", "LM", ( unsigned int)sym_lineno_4); 
                                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dbxout_source_line/src/dbxout.c:1097:52: error: use of undeclared identifier 'sym_lineno_4'
fprintf( asmfile, ".%s%u:\n", "LM", ( unsigned int)sym_lineno_4); 
                                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dbxout_source_line/src/dbxout.c:1098:3: error: use of undeclared identifier 'sym_lineno_4'
++sym_lineno_4; 
  ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dbxout_source_line/src/obj/dbxout.o] Error 1
